<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="@dimen/dimen_4"
        android:background="@drawable/bg_rounded_search_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_9"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/dimen_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchView">

        <RadioButton
            android:id="@+id/rbIgtv"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginStart="@dimen/dimen_8"
            android:background="@drawable/bg_radio_unpick"
            android:button="@null"
            android:drawableStart="@drawable/ic_igtv"
            android:drawablePadding="@dimen/dimen_4"
            android:paddingStart="@dimen/dimen_11"
            android:paddingTop="@dimen/dimen_8"
            android:paddingEnd="@dimen/dimen_10"
            android:paddingBottom="@dimen/dimen_7"
            android:text="@string/igtv"
            android:textSize="@dimen/dimen_14sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbShop"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_32"
            android:layout_marginStart="@dimen/dimen_6"
            android:background="@drawable/bg_radio_unpick"
            android:button="@null"
            android:paddingStart="@dimen/dimen_11"
            android:paddingTop="@dimen/dimen_8"
            android:paddingEnd="@dimen/dimen_10"
            android:paddingBottom="@dimen/dimen_7"
            android:text="@string/shop"
            android:textSize="@dimen/dimen_14sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbStyle"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_32"
            android:layout_marginStart="@dimen/dimen_6"
            android:background="@drawable/bg_radio_unpick"
            android:button="@null"
            android:paddingStart="@dimen/dimen_11"
            android:paddingTop="@dimen/dimen_8"
            android:paddingEnd="@dimen/dimen_10"
            android:paddingBottom="@dimen/dimen_7"
            android:text="@string/style"
            android:textSize="@dimen/dimen_14sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbSports"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_32"
            android:layout_marginStart="@dimen/dimen_6"
            android:background="@drawable/bg_radio_unpick"
            android:button="@null"
            android:paddingStart="@dimen/dimen_11"
            android:paddingTop="@dimen/dimen_8"
            android:paddingEnd="@dimen/dimen_10"
            android:paddingBottom="@dimen/dimen_7"
            android:text="@string/sports"
            android:textSize="@dimen/dimen_14sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbAuto"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_32"
            android:layout_marginStart="@dimen/dimen_6"
            android:background="@drawable/bg_radio_unpick"
            android:button="@null"
            android:paddingStart="@dimen/dimen_11"
            android:paddingTop="@dimen/dimen_8"
            android:paddingEnd="@dimen/dimen_10"
            android:paddingBottom="@dimen/dimen_7"
            android:text="@string/auto"
            android:textSize="@dimen/dimen_14sp"
            android:textStyle="bold" />
    </RadioGroup>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_0"
        android:layout_marginTop="@dimen/dimen_7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="3" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleViewSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:maxHeight="@dimen/dimen_250"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="@id/searchView"
        app:layout_constraintStart_toStartOf="@id/searchView"
        app:layout_constraintTop_toBottomOf="@id/searchView" />

</androidx.constraintlayout.widget.ConstraintLayout>
